<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_ramadan"
            android:icon="@drawable/ic_daily_calendar"
            android:title="@string/daily_ramadan_calendar"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_ramadan_calendar"
            android:icon="@drawable/ic_monthly_calendar"
            android:title="@string/full_ramadan_calendar"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_ramadan_in_quran"
            android:icon="@drawable/ic_quran"
            android:title="@string/ramadan_in_the_holy_quran"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_ramadan_dua"
            android:icon="@drawable/ic_dua"
            android:title="@string/ramadan_duah"
            app:itemIconTint="@color/colorPrimary"
            app:iconTint="@color/light_purple"/>

        <item
            android:id="@+id/nav_qibla_compass"
            android:icon="@drawable/ic_compass"
            android:title="@string/qiblah_compass"
            app:itemIconTint="@color/colorPrimary"
            app:iconTint="@color/light_purple"/>
    </group>

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/select_language"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update"
            android:title="@string/update_app"
            app:itemIconTint="@color/colorPrimary" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"
            app:itemIconTint="@color/colorPrimary" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_credits"
            android:title="@string/credits"
            app:itemIconTint="@color/colorPrimary" />
    </group>
</menu>
