<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EEFD"
    android:orientation="vertical"
    tools:context=".RamadanDuahFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/AyatCardStyle"
                android:layout_marginTop="@dimen/margin"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="@dimen/card_elevation_title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingRight="@dimen/padding_15"
                    android:paddingBottom="@dimen/padding_10">

                    <TextView
                        style="@style/BanglaFontStyle"
                        android:fontFamily="@font/sutonny_mj_bold"
                        android:text="@string/sahr_dua"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/AyatCardStyle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_15">

                    <TextView
                        android:id="@+id/ayat_no_1"
                        style="@style/BanglaFontStyle"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/sahr_dua_ayat_no" />

                    <TextView
                        android:id="@+id/arabic_1"
                        style="@style/ArabicFontStyle"
                        android:layout_below="@id/ayat_no_1"
                        android:text="@string/sahr_dua_arabic" />

                    <TextView
                        android:id="@+id/pronounciation_1"
                        style="@style/BanglaFontStyle"
                        android:layout_below="@+id/arabic_1"
                        android:layout_marginTop="10dp"
                        android:text="@string/sahr_dua_pronunciation" />

                    <TextView
                        android:id="@+id/meaning_1"
                        style="@style/BanglaFontStyle"
                        android:layout_below="@+id/pronounciation_1"
                        android:layout_marginTop="10dp"
                        android:text="@string/sahr_dua_bangla" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/AyatCardStyle"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="@dimen/card_elevation_title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingRight="@dimen/padding_15"
                    android:paddingBottom="@dimen/padding_10">

                    <TextView
                        style="@style/BanglaFontStyle"
                        android:fontFamily="@font/sutonny_mj_bold"
                        android:text="@string/itmam_dua"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/AyatCardStyle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_15">

                    <TextView
                        android:id="@+id/ayat_no_2"
                        style="@style/BanglaFontStyle"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/itmam_dua_ayat_no" />

                    <TextView
                        android:id="@+id/arabic_2"
                        style="@style/ArabicFontStyle"
                        android:layout_below="@id/ayat_no_2"
                        android:text="@string/itmam_dua_arabic" />

                    <TextView
                        android:id="@+id/pronounciation_2"
                        style="@style/BanglaFontStyle"
                        android:layout_below="@+id/arabic_2"
                        android:layout_marginTop="10dp"
                        android:text="@string/itmam_dua_pronunciation" />

                    <TextView
                        style="@style/BanglaFontStyle"
                        android:layout_below="@+id/pronounciation_2"
                        android:layout_marginTop="10dp"
                        android:text="@string/itmam_dua_bangla" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>